Remove fixed width of left aligned tabs

--- a/public/css/icinga/tabs.less
+++ b/public/css/icinga/tabs.less
@@ -74,7 +74,7 @@
   border: 1px solid @gray-light;
   border-top: none;
   margin-left: -1px;
-  width: 14em;
+  min-width: 14em;
 }
 
 .tabs > .dropdown-nav-item > ul > li:hover > a {
@@ -87,6 +87,7 @@
   // Offset according to width
   margin-left: -10.95em;
   margin-right: 1px;
+  width: 14em;
 }
 
 // TODO(el): Rename display-on-hover and move it to main.less
